# gameboii

./: .gitignore  Cargo.toml  build.rs  disasm_file.txt  lol.py  newcodes.json  opcodes.json
docs/: Z80 Op Codes for ZINT.html
gameboii/: Cargo.toml
gameboii/src/: window.rs
interpreterboii/: Cargo.toml  opcodes.json
interpreterboii/src/: main.rs
libgameboii/: Cargo.toml  opcodes.json
libgameboii/src/: address.rs  cpu.rs  debug_log.rs  function_stubs.rs  lib.rs  ppu.rs
libgameboii/tests/: blargg.rs  blargg_tests.rs
libgameboii/tests/gekkio/emulator-only/mbc1/: bits_ram_en.gb  bits_ram_en.sym  multicart_rom_8Mb.gb  multicart_rom_8Mb.sym  ram_256Kb.sym  ram_64Kb.sym  rom_16Mb.gb  rom_16Mb.sym  rom_1Mb.sym  rom_2Mb.gb  rom_4Mb.gb  rom_512Kb.gb
libgameboii/tests/gekkio/misc/: boot_hwio-C.gb  boot_hwio-C.sym  boot_regs-A.gb  boot_regs-A.sym  boot_regs-cgb.gb
libgameboii/tests/gekkio/misc/bits/: unused_hwio-C.sym
src/: address.rs  cpu.rs  debug_log.rs  function_stubs.rs  gpu.rs  main.rs  ppu.rs  window.rs
tests/gekkio/emulator-only/mbc1/: ram_256Kb.gb  ram_64Kb.gb  rom_1Mb.gb  rom_2Mb.sym  rom_4Mb.sym  rom_512Kb.sym  rom_8Mb.gb  rom_8Mb.sym
tests/gekkio/manual-only/: sprite_priority.sym
tests/gekkio/misc/: boot_regs-cgb.sym
tests/gekkio/misc/bits/: unused_hwio-C.gb
tests/gekkio/misc/ppu/: vblank_stat_intr-C.gb  vblank_stat_intr-C.sym
tools/: outregex.txt
