[package]
name = "gameboii"
version = "0.1.0"
authors = ["Tommaso Checchi <tommaso.checchi1@gmail.com>"]
build = "build.rs"

[dependencies]
bit_field = "*"
clap = "*"
serde = "*"
serde_json = "*"
serde_derive = "*"
regex = "*"
piston = "*"
piston2d-graphics = "*"
pistoncore-glutin_window = "*"
piston2d-opengl_graphics = "*"
image = "*"

[build-dependencies]
serde = "*"
serde_json = "*"
serde_derive = "*"
itertools = "*"
regex = "*"